@@ -2,6 +2,8 @@
 
 	* README.md: Minor edits, more canonical URLs
 
+	* .travis.yml: Use https for curl download
+
 2017-01-30  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): New minor version and date
